--- a/TRABALHO1/Home.html
+++ b/TRABALHO1/Home.html
@@ -4,31 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Sharing - Página Inicial</title>
-    <link rel="stylesheet" href="CSS/Home.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-image: url('Img/1-51dd0dc8.png'); /* Caminho da imagem */
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 100vh;
+            color: #333;
+        }
+        .logo {
+            max-width: 40px;
+            height: auto;
+            margin-right: 10px;
+        }
+        .logo1 {
+            max-width: 200px;
+            height: auto;
+            margin: 20px 0;
+        }
+        .btn-custom {
+            background-color: #3AD2CE;
+            color: white;
+            transition: background-color 0.3s;
+        }
+        .btn-custom:hover {
+            background-color: #7bcfcc;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <!-- Cabeçalho com Logotipo e Botões -->
-        <header>
-            <!-- Logotipo e nome do app -->
-            <div class="logo-container">
+        <!-- Cabeçalho -->
+        <header class="d-flex justify-content-between align-items-center py-3 px-4 bg-light shadow fixed-top">
+            <div class="d-flex align-items-center">
                 <img src="IMG/imagem_sem_fundo.png" alt="Logo The Sharing" class="logo">
-                <span class="app-name">The Sharing</span>
+                <span class="fs-4 fw-bold text-dark">The Sharing</span>
             </div>
-            
-            <!-- Botões de Login e Registrar -->
-            <div class="auth-buttons">
-                <a href="login.html" class="btn">Login</a>
-                <a href="register.html" class="btn">Registrar-se</a>
+            <div>
+                <a href="login.html" class="btn btn-custom me-2">Login</a>
+                <a href="register.html" class="btn btn-custom">Registrar-se</a>
             </div>
         </header>
 
         <!-- Conteúdo Principal -->
-        <div class="main-content">
-            <h1>Bem-vindo ao The Sharing</h1>
+        <div class="main-content text-center d-flex flex-column justify-content-center align-items-center vh-100 mt-5 pt-5">
+            <h1 class="display-4 fw-bold mb-3">Bem-vindo ao The Sharing</h1>
             <img src="IMG/imagem_sem_fundo.png" alt="Logo The Sharing1" class="logo1">
-            <p>A plataforma de compartilhamento de roupas onde tu pode compartilhar e emprestar peças com seus amigos!</p>
+            <p class="fs-5 text-muted">A plataforma de compartilhamento de roupas onde tu pode compartilhar e emprestar peças com seus amigos!</p>
         </div>
     </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
