--- a/TRABALHO1/Home.html
+++ b/TRABALHO1/Home.html
@@ -3,62 +3,164 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Sharing - Página Inicial</title>
+    <title>The Sharing</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome para ícones -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         body {
+            margin: 0;
+            padding: 0;
             font-family: Arial, sans-serif;
-            background-image: url('Img/1-51dd0dc8.png'); /* Caminho da imagem */
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
             height: 100vh;
-            color: #333;
+            display: flex;
+            transition: background-color 0.3s, color 0.3s;
         }
-        .logo {
-            max-width: 40px;
-            height: auto;
-            margin-right: 10px;
+        .light-mode {
+            background-color: #fff; /* Fundo branco */
+            color: #000; /* Texto preto */
         }
-        .logo1 {
-            max-width: 200px;
-            height: auto;
-            margin: 20px 0;
+        .dark-mode {
+            background-color: #000; /* Fundo preto */
+            color: #fff; /* Texto branco */
         }
-        .btn-custom {
-            background-color: #3AD2CE;
-            color: white;
+        .left-section {
+            flex: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #f5f5f5; /* Fundo claro para destacar a imagem */
             transition: background-color 0.3s;
         }
-        .btn-custom:hover {
-            background-color: #7bcfcc;
+        .dark-mode .left-section {
+            background-color: #333; /* Fundo escuro no modo dark */
+        }
+        .left-section img {
+            max-width: 80%;
+            height: auto;
+        }
+        .right-section {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 0 50px;
+        }
+        h1 {
+            font-size: 2.5rem;
+            font-weight: bold;
+            margin-bottom: 2rem;
+        }
+        .btn-custom-white, .btn-custom-blue {
+            font-size: 1rem;
+            padding: 0.8rem 1rem;
+            border-radius: 20px;
+            width: 300px;
+            margin: 10px 0;
+            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .btn-custom-white {
+            background-color: #fff;
+            color: #000;
+            border: 1px solid #ddd;
+        }
+        .btn-custom-white:hover {
+            background-color: #f5f5f5;
+        }
+        .dark-mode .btn-custom-white {
+            background-color: #333;
+            color: #fff;
+            border: 1px solid #444;
+        }
+        .btn-custom-blue {
+            background-color: #007bff;
+            color: white;
+            border: none;
+        }
+        .btn-custom-blue:hover {
+            background-color: #0056b3;
+        }
+        footer {
+            position: absolute;
+            bottom: 20px;
+            font-size: 0.8rem;
+            text-align: center;
+            width: 100%;
+        }
+        footer a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
+        /* Botão da lua */
+        .mode-toggle {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background-color: transparent;
+            border: none;
+            font-size: 1.5rem;
+            color: #000;
+            cursor: pointer;
+            transition: color 0.3s;
+        }
+        .dark-mode .mode-toggle {
+            color: #fff; /* Ícone da lua fica branco no modo escuro */
         }
     </style>
 </head>
-<body>
-    <div class="container">
-        <!-- Cabeçalho -->
-        <header class="d-flex justify-content-between align-items-center py-3 px-4 bg-light shadow fixed-top">
-            <div class="d-flex align-items-center">
-                <img src="IMG/imagem_sem_fundo.png" alt="Logo The Sharing" class="logo">
-                <span class="fs-4 fw-bold text-dark">The Sharing</span>
-            </div>
-            <div>
-                <a href="login.html" class="btn btn-custom me-2">Login</a>
-                <a href="register.html" class="btn btn-custom">Registrar-se</a>
-            </div>
-        </header>
-
-        <!-- Conteúdo Principal -->
-        <div class="main-content text-center d-flex flex-column justify-content-center align-items-center vh-100 mt-5 pt-5">
-            <h1 class="display-4 fw-bold mb-3">Bem-vindo ao The Sharing</h1>
-            <img src="IMG/imagem_sem_fundo.png" alt="Logo The Sharing1" class="logo1">
-            <p class="fs-5 text-muted">A plataforma de compartilhamento de roupas onde tu pode compartilhar e emprestar peças com seus amigos!</p>
-        </div>
+<body class="light-mode">
+    <button class="mode-toggle" id="toggleMode">
+        <i class="fas fa-moon"></i>
+    </button>
+    <div class="left-section">
+        <img src="IMG/imagem_sem_fundo.png" alt="Logo grande">
     </div>
-
+    <div class="right-section">
+        <h1>Acontecendo agora</h1>
+        <button class="btn-custom-white">
+            <i class="fab fa-google"></i> Inscrever-se com Google       
+        </button>
+        <button class="btn-custom-white">
+            <i class="fab fa-apple"></i> Inscrever-se com Apple
+        </button><br>
+        <button class="btn-custom-blue">Criar conta</button><br>
+        <h3>Já tem uma conta?</h3>
+        <button class="btn-custom-blue">Entrar</button>
+    </div>
+    <footer>
+        Bem-vindo ao The Sharing! A plataforma de compartilhamento de roupas onde tu pode compartilhar e emprestar peças com teus amigos! <br>
+        Para mais detalhes, consulte nossa <a href="https://the sharing">Política de Privacidade</a>.
+    </footer>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Font Awesome JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
+    <script>
+        // JavaScript para alternar entre modos
+        const toggleButton = document.getElementById('toggleMode');
+        const body = document.body;
+
+        toggleButton.addEventListener('click', () => {
+            body.classList.toggle('dark-mode');
+            body.classList.toggle('light-mode');
+
+            // Atualizar o ícone da lua
+            if (body.classList.contains('dark-mode')) {
+                toggleButton.innerHTML = '<i class="fas fa-sun"></i>'; // Ícone do sol
+            } else {
+                toggleButton.innerHTML = '<i class="fas fa-moon"></i>'; // Ícone da lua
+            }
+        });
+    </script>
 </body>
 </html>
