--- a/TRABALHO1/Home.html
+++ b/TRABALHO1/Home.html
@@ -18,7 +18,7 @@
             transition: background-color 0.3s, color 0.3s;
         }
         .light-mode {
-            background-color: #fff; /* Fundo branco */
+            background-color: #ffffff; /* Fundo branco */
             color: #000; /* Texto preto */
         }
         .dark-mode {
@@ -30,11 +30,11 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #f5f5f5; /* Fundo claro para destacar a imagem */
+            background-color: #ffffff; /* Fundo claro para destacar a imagem */
             transition: background-color 0.3s;
         }
         .dark-mode .left-section {
-            background-color: #333; /* Fundo escuro no modo dark */
+            background-color: #000000; /* Fundo escuro no modo dark */
         }
         .left-section img {
             max-width: 80%;
@@ -123,10 +123,10 @@
         <i class="fas fa-moon"></i>
     </button>
     <div class="left-section">
-        <img src="IMG/imagem_sem_fundo.png" alt="Logo grande">
+        <img src="IMG/imagemthesharing1.PNG" alt="Logo grande">
     </div>
     <div class="right-section">
-        <h1>Acontecendo agora</h1>
+        <h1>Partilhe agora!</h1>
         <button class="btn-custom-white">
             <i class="fab fa-google"></i> Inscrever-se com Google       
         </button>
@@ -135,11 +135,11 @@
         </button><br>
         <button class="btn-custom-blue">Criar conta</button><br>
         <h3>Já tem uma conta?</h3>
-        <button class="btn-custom-blue">Entrar</button>
+        <button class="btn-custom-blue" onclick="location.href='Entrar.html'">Entrar</button>
     </div>
     <footer>
         Bem-vindo ao The Sharing! A plataforma de compartilhamento de roupas onde tu pode compartilhar e emprestar peças com teus amigos! <br>
-        Para mais detalhes, consulte nossa <a href="https://the sharing">Política de Privacidade</a>.
+        Para mais detalhes, consulte <a href="">Mais Sobre</a>.
     </footer>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
