--- a/TRABALHO1/Entrar.html
+++ b/TRABALHO1/Entrar.html
@@ -197,7 +197,10 @@
         <p>ou</p>
 
         <!-- Campo de entrada -->
-        <input type="text" class="input-field" placeholder="Celular, e-mail ou nome de usuário">
+        <input type="text" class="input-field" placeholder="e-mail do Utilizador">
+
+        <!-- Campo de entrada -->
+        <input type="password" class="input-field" placeholder="Senha">
 
         <!-- Botão de avançar -->
         <button class="btn-custom-black">Avançar</button>
