--- a/TRABALHO1/Entrar.html
+++ b/TRABALHO1/Entrar.html
@@ -206,11 +206,11 @@
         <button class="btn-custom-black">Avançar</button>
 
         <!-- Link de esquecimento de senha -->
-        <button class="btn-custom-white">Esqueceu sua senha?</button>
+        <button class="btn-custom-white">Esqueceu a senha?</button>
 
         <!-- Link para criar uma conta -->
         <footer>
-            Não tem uma conta? <a href="#">Inscreva-se</a>
+            Não tem uma conta? <a href="Criar.html">Inscreva-se</a>
         </footer>
     </div>
 
