--- a/TRABALHO1/Home.html
+++ b/TRABALHO1/Home.html
@@ -129,11 +129,8 @@
         <h1>Partilhe agora!</h1>
         <button class="btn-custom-white">
             <i class="fab fa-google"></i> Inscrever-se com Google       
-        </button>
-        <button class="btn-custom-white">
-            <i class="fab fa-apple"></i> Inscrever-se com Apple
         </button><br>
-        <button class="btn-custom-blue">Criar conta</button><br>
+        <button class="btn-custom-blue"onclick="location.href='Criar.html'">Criar Conta</button><br>
         <h3>Já tem uma conta?</h3>
         <button class="btn-custom-blue" onclick="location.href='Entrar.html'">Entrar</button>
     </div>
